--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": ["eslint:recommended", "react", "prettier"],
   "rules": {
     "no-new": [0],
-    "new-cap": [0]
+    "new-cap": [0],
+    "prefer-reflect": [0]
   },
   "parser": "babel-eslint",
   "env": {
