--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "rules": {
     "no-new": [0],
     "new-cap": [0],
-    "prefer-reflect": [0]
+    "prefer-reflect": [0],
+    "react/prop-types": [0]
   },
   "parser": "babel-eslint",
   "env": {
