--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Yandex Messenger",
+  "short_name": "Messenger",
   "name": "Mobile Messenger",
   "icons": [
     {
@@ -10,6 +10,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#fab81e",
-  "background_color": "#fab81e"
+  "theme_color": "#8ed9b2",
+  "background_color": "#8ed9b2"
 }
