--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
+    "cloudinary": "^1.11.0",
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
     "debounce": "^1.1.0",
@@ -16,8 +18,10 @@
     "faker": "^4.1.0",
     "gh-pages": "^1.1.0",
     "jest-fetch-mock": "^1.5.0",
+    "jsonwebtoken": "^8.2.1",
     "mongod": "^2.0.0",
     "mongodb": "^3.0.5",
+    "multer": "^1.3.0",
     "nodemon": "^1.15.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
