--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gh-pages": "^1.1.0",
     "jest-fetch-mock": "^1.5.0",
     "jsonwebtoken": "^8.2.1",
+    "jwt-decode": "^2.2.0",
     "mongod": "^2.0.0",
     "mongodb": "^3.0.5",
     "multer": "^1.3.0",
