--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.3.2",
     "react-autosize-textarea": "^3.0.2",
     "react-dom": "^16.3.2",
+    "react-dropzone": "^4.2.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
