--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://synthetiquely.github.io/plotva-project/",
   "dependencies": {
     "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
