--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-autosize-textarea": "^3.0.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
+    "react-notification": "^6.8.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
